Fix figure spacing (images, tweets, etc.) but broke video responsiveness

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -92,6 +92,15 @@ a:hover {
   /* color: #03a6ff; */
 }
 
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+    vertical-align: middle;
+}
+
 p,
 ul,
 ol,
